Start creating nier ui

--- a/index.html
+++ b/index.html
@@ -1,53 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
-</head>
-<body>
-    <div class="container">
-        <div class="header"></div>
-        <div class="sidebar">
-            <div class="logo">Dashboard</div>
-            <ul>
-                <li>Home</li>
-                <li>Profile</li>
-                <li>Messages</li>
-                <li>Tasks</li>
-                <li>Communities</li>
-            </ul>
-            <ul>
-                <li>Settings</li>
-                <li>Support</li>
-                <li>Privacy</li>
-            </ul>
-        </div>
-        <div class="main-container">
-            <div class="projects">
-                <div class="project_card"></div>
-                <div class="project_card"></div>
-                <div class="project_card"></div>
-                <div class="project_card"></div>
-                <div class="project_card"></div>
-                <div class="project_card"></div>
-            </div>
-            <div class="right_side">
-                <div class="anouncement_card">
-                    <dive class="anouncement"></dive>
-                    <dive class="anouncement"></dive>
-                    <dive class="anouncement"></dive>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/style.css">
+        <title>Document</title>
+    </head>
+    <body>
+        <div class="container">
+            <div class="header">
+                <div class="top_header">
+                    <div class="left_side">
+                        <img class="search_img">
+                         <input type="search" class="search_bar">
+                    </div>
+                    <div class="right_side">
+                        <img class="notification">
+                        <img class="profile">
+                        <div class="name">Morgan Oakley</div>
+                    </div>
                 </div>
-                <div class="trending">
-                    <div class="trending_page"></div>
-                    <div class="trending_page"></div>
-                    <div class="trending_page"></div>
-                    <div class="trending_page"></div>
+                <div class="bottom_header">
+                    <div class="left_side">
+                        <!-- <img class="profile" src="imgs/2BPrayingRein.webp"> -->
+                        <div class="greet_profile">
+                            <p class="greeting">Hi there,</p>
+                            <p class="name">Morgan Oakley (@morgan)</p>
+                        </div>
+                    </div>
+                    <div class="right_side">
+                        <ul>
+                            <button>New</button>
+                            <button>Upload</button>
+                            <button>Share</button>
+                        </ul>
+                    </div>
                 </div>
             </div>
+            <div class="sidebar">
+                <div class="logo">Dashboard</div>
+                <div class="menu">
+                    <ul>
+                        <li>Home</li>
+                        <li>Profile</li>
+                        <li>Messages</li>
+                        <li>Tasks</li>
+                        <li>Communities</li>
+                    </ul>
+                    <ul>
+                        <li>Settings</li>
+                        <li>Support</li>
+                        <li>Privacy</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="main_container">
+                <div class="left_side">
+                    <div class="title">Your Projects</div>
+                    <div class="projects">
+                        <div class="project_card">
+                            <div class="border">
+                                <div class="big_border"></div>
+                                <div class="small_border"></div>
+                            </div>
+                        </div>
+                        <div class="project_card">
+                            <div class="border">
+                                <div class="big_border"></div>
+                                <div class="small_border"></div>
+                            </div>
+                        </div>
+                        <div class="project_card">
+                            <div class="border">
+                                <div class="big_border"></div>
+                                <div class="small_border"></div>
+                            </div>
+                        </div>
+                        <div class="project_card">
+                            <div class="border">
+                                <div class="big_border"></div>
+                                <div class="small_border"></div>
+                            </div>
+                        </div>
+                        <div class="project_card">
+                            <div class="border">
+                                <div class="big_border"></div>
+                                <div class="small_border"></div>
+                            </div>
+                        </div>
+                        <div class="project_card">
+                            <div class="border">
+                                <div class="big_border"></div>
+                                <div class="small_border"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="right_side">
+                    <div class="title">Anouncements</div>
+                    <div class="anouncement_card">
+                        <dive class="anouncement"></dive>
+                        <dive class="anouncement"></dive>
+                        <dive class="anouncement"></dive>
+                    </div>
+                    <div class="title">Trending</div>
+                    <div class="trending">
+                        <div class="trending_page"></div>
+                        <div class="trending_page"></div>
+                        <div class="trending_page"></div>
+                        <div class="trending_page"></div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-</body>
+    </body>
 </html>
