Change search bar

--- a/index.html
+++ b/index.html
@@ -39,73 +39,66 @@
                 </div>
             </div>
             <div class="sidebar">
-                <div class="logo">Dashboard</div>
+                <div class="logo">
+                    <img class="yorha" src="imgs/home_light-theme.png">
+                    <h1>YoRHa</h1>
+                </div>
                 <div class="menu">
-                    <ul>
-                        <li>Home</li>
-                        <li>Profile</li>
-                        <li>Messages</li>
-                        <li>Tasks</li>
-                        <li>Communities</li>
-                    </ul>
-                    <ul>
-                        <li>Settings</li>
-                        <li>Support</li>
-                        <li>Privacy</li>
-                    </ul>
+                    <div class="first_list">
+                        <div class="border">
+                            <div class="big_border"></div>
+                            <div class="small_border"></div>
+                        </div>
+                        <ul>
+                            <li><div class="marker"></div>Home</li>
+                            <li><div class="marker"></div>Profile</li>
+                            <li><div class="marker"></div>Messages</li>
+                            <li><div class="marker"></div>Tasks</li>
+                            <li><div class="marker"></div>Communities</li>
+                        </ul>
+                    </div>
+                    <div class="second_list">
+                        <div class="border">
+                            <div class="big_border"></div>
+                            <div class="small_border"></div>
+                        </div>
+                        <ul>
+                            <li><div class="marker"></div>Settings</li>
+                            <li><div class="marker"></div>Support</li>
+                            <li><div class="marker"></div>Privacy</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
             <div class="main_container">
                 <div class="left_side">
-                    <div class="title">Your Projects</div>
                     <div class="projects">
+                        <div class="title">Your Projects</div>
                         <div class="project_card">
-                            <div class="border">
-                                <div class="big_border"></div>
-                                <div class="small_border"></div>
-                            </div>
                         </div>
                         <div class="project_card">
-                            <div class="border">
-                                <div class="big_border"></div>
-                                <div class="small_border"></div>
-                            </div>
                         </div>
                         <div class="project_card">
-                            <div class="border">
-                                <div class="big_border"></div>
-                                <div class="small_border"></div>
-                            </div>
                         </div>
                         <div class="project_card">
-                            <div class="border">
-                                <div class="big_border"></div>
-                                <div class="small_border"></div>
-                            </div>
                         </div>
                         <div class="project_card">
-                            <div class="border">
-                                <div class="big_border"></div>
-                                <div class="small_border"></div>
-                            </div>
                         </div>
                         <div class="project_card">
-                            <div class="border">
-                                <div class="big_border"></div>
-                                <div class="small_border"></div>
-                            </div>
+
                         </div>
                     </div>
                 </div>
                 <div class="right_side">
-                    <div class="title">Anouncements</div>
                     <div class="anouncement_card">
+                        <div class="title">Anouncements</div>
                         <dive class="anouncement"></dive>
                         <dive class="anouncement"></dive>
                         <dive class="anouncement"></dive>
                     </div>
-                    <div class="title">Trending</div>
+                   
                     <div class="trending">
+                        <div class="title">Trending</div>
                         <div class="trending_page"></div>
                         <div class="trending_page"></div>
                         <div class="trending_page"></div>
