Create project, trending, announcement, header

--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
             <div class="header">
                 <div class="top_header">
                     <div class="left_side">
-                        <img class="search_img">
+                        <img class="search_img" src="icons/jake-weirick-dWUPJdXiC-M-unsplash.svg">
                          <input type="search" class="search_bar">
                     </div>
                     <div class="right_side">
-                        <img class="notification">
-                        <img class="profile">
-                        <div class="name">Morgan Oakley</div>
+                        <img class="notification" src="icons/bell.svg">
+                        <div class="profile"></div>
+                        <div class="name">YoRHa No.2 Type B</div>
                     </div>
                 </div>
                 <div class="bottom_header">
                     <div class="left_side">
-                        <!-- <img class="profile" src="imgs/2BPrayingRein.webp"> -->
+                        <div class="profile_img"></div>
                         <div class="greet_profile">
                             <p class="greeting">Hi there,</p>
-                            <p class="name">Morgan Oakley (@morgan)</p>
+                            <p class="name">YoRHa No.2 Type B (@2B)</p>
                         </div>
                     </div>
                     <div class="right_side">
@@ -73,36 +73,123 @@
             <div class="main_container">
                 <div class="left_side">
                     <div class="projects">
-                        <div class="title">Your Projects</div>
+                        <div class="title">Your Missions</div>
                         <div class="project_card">
+                            <div class="mission">
+                                <p class="mission_name">Reboot</p>
+                                <p class="mission_report">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            </div>
+                            <div class="functions">
+                                <img class="function" src="icons/star-plus-outline.svg" alt="star plus">
+                                <img class="function" src="icons/eye-plus-outline.svg" alt="eye plus">
+                                <img class="function" src="icons/source-fork.svg" alt="source fork">
+                            </div>
                         </div>
                         <div class="project_card">
+                            <div class="mission">
+                                <p class="mission_name">Alien Report</p>
+                                <p class="mission_report">Ac feugiat sed lectus vestibulum mattis ullamcorper. Leo a diam sollicitudin tempor id eu. Sagittis vitae et leo duis ut diam quam nulla porttitor.</p>
+                            </div>    
+                                <div class="functions">
+                                    <img class="function" src="icons/star-plus-outline.svg" alt="star plus">
+                                    <img class="function" src="icons/eye-plus-outline.svg" alt="eye plus">
+                                    <img class="function" src="icons/source-fork.svg" alt="source fork">
+                                
+                            </div>
                         </div>
                         <div class="project_card">
+                            <div class="mission">
+                                <p class="mission_name">The Forest Kingdom</p>
+                                <p class="mission_report">Sit amet aliquam id diam maecenas ultricies mi eget mauris. Viverra mauris in aliquam sem fringilla ut morbi.</p>
+                            </div>    
+                                <div class="functions">
+                                    <img class="function" src="icons/star-plus-outline.svg" alt="star plus">
+                                    <img class="function" src="icons/eye-plus-outline.svg" alt="eye plus">
+                                    <img class="function" src="icons/source-fork.svg" alt="source fork">
+                                </div>
                         </div>
                         <div class="project_card">
+                            <div class="mission">
+                                <p class="mission_name">Flooded City Recon</p>
+                                <p class="mission_report">Mauris in aliquam sem fringilla ut morbi tincidunt augue. Sodales neque sodales ut etiam sit amet nisl purus in.</p>
+                            </div>    
+                                <div class="functions">
+                                    <img class="function" src="icons/star-plus-outline.svg" alt="star plus">
+                                    <img class="function" src="icons/eye-plus-outline.svg" alt="eye plus">
+                                    <img class="function" src="icons/source-fork.svg" alt="source fork">
+                                </div>
                         </div>
                         <div class="project_card">
+                            <div class="mission">
+                                <p class="mission_name">Redheads</p>
+                                <p class="mission_report">Massa enim nec dui nunc mattis. Velit euismod in pellentesque massa placerat duis.</p>
+                            </div>    
+                                <div class="functions">
+                                    <img class="function" src="icons/star-plus-outline.svg" alt="star plus">
+                                    <img class="function" src="icons/eye-plus-outline.svg" alt="eye plus">
+                                    <img class="function" src="icons/source-fork.svg" alt="source fork">
+                                </div>
                         </div>
                         <div class="project_card">
-
+                            <div class="mission">
+                                <p class="mission_name">Twisted Religion</p>
+                                <p class="mission_report">Consectetur adipiscing elit ut aliquam purus sit amet. Pretium viverra suspendisse potenti nullam. Augue eget arcu dictum varius duis at</p>
+                            </div>    
+                                <div class="functions">
+                                    <img class="function" src="icons/star-plus-outline.svg" alt="star plus">
+                                    <img class="function" src="icons/eye-plus-outline.svg" alt="eye plus">
+                                    <img class="function" src="icons/source-fork.svg" alt="source fork">
+                                </div>
                         </div>
                     </div>
                 </div>
                 <div class="right_side">
-                    <div class="anouncement_card">
-                        <div class="title">Anouncements</div>
-                        <dive class="anouncement"></dive>
-                        <dive class="anouncement"></dive>
-                        <dive class="anouncement"></dive>
+                    <div class="announcement_card">
+                        <div class="title">Announcements</div>
+                        <dive class="announcement">
+                            <p class="announcement_title">Site Maintenance</p>
+                            <p class="announcement_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt...</p>
+                        </dive>
+                        <dive class="announcement">
+                            <p class="announcement_title">Community Share Day</p>
+                            <p class="announcement_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt...</p>
+                        </dive>
+                        <dive class="announcement">
+                            <p class="announcement_title">Updated Privacy Policy</p>
+                            <p class="announcement_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt...</p>
+                        </dive>
                     </div>
                    
                     <div class="trending">
                         <div class="title">Trending</div>
-                        <div class="trending_page"></div>
-                        <div class="trending_page"></div>
-                        <div class="trending_page"></div>
-                        <div class="trending_page"></div>
+                        <div class="trending_page">
+                            <div class="trending_img" id="A2"></div>
+                            <div class="trending_profile">
+                                <p class="trending_tag">@A2</p>
+                                <p class="trending_name">Lone Survivor</p>
+                            </div>
+                        </div>
+                        <div class="trending_page">
+                            <div class="trending_img" id="nineS"></div>
+                            <div class="trending_profile">
+                                <p class="trending_tag">@9S</p>
+                                <p class="trending_name">Hacking Game</p>
+                            </div>
+                        </div>
+                        <div class="trending_page">
+                            <div class="trending_img" id="kaine"></div>
+                            <div class="trending_profile">
+                                <p class="trending_tag">@kaine</p>
+                                <p class="trending_name">Profanity Inserter</p>
+                            </div>
+                        </div>
+                        <div class="trending_page" >
+                            <div class="trending_img" id="nier"></div>
+                            <div class="trending_profile">
+                                <p class="trending_tag">@nier</p>
+                                <p class="trending_name">Sister Complex Therapy</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
